--- a/.air.toml
+++ b/.air.toml
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
   bin = "tmp\\main.exe"
-  cmd = "go build -o ./tmp/main.exe ."
-  delay = 3000
+  cmd = "go build -o ./tmp/main.exe ./cmd/"
+  delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
   exclude_regex = ["_test.go"]
